# todo_list_rust

./: Cargo.toml
src/: main.rs  server.rs
src/objects/: application.rs  ticket.rs
todo_list_app/: .gitignore  Cargo.toml  README.md
todo_list_app/src/: server.rs
todo_list_app/src/objects/: application.rs  mod.rs  ticket.rs
todo_list_fe/: package-lock.json  package.json
todo_list_fe/src/: App.js  Ticket.js
todo_list_fe/src/components/: ListGroup.js
