[package]
name = "todo_list_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"

[[bin]]
name = "todo_list_app"
path = "src/server.rs"
